--- a/styles/Home.module.css
+++ b/styles/Home.module.css
@@ -1,5 +1,9 @@
 .container {
   padding: 0 2rem;
+  display: flex;
+  justify-content: center;
+  position: relative;
+  z-index: 2;
 }
 
 .main {
@@ -10,97 +14,6 @@
   flex-direction: column;
   justify-content: center;
   align-items: center;
-}
-
-.footer {
-  display: flex;
-  flex: 1;
-  padding: 2rem 0;
-  border-top: 1px solid #eaeaea;
-  justify-content: center;
-  align-items: center;
-}
-
-.footer a {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  flex-grow: 1;
-}
-
-.title a {
-  color: #0070f3;
-  text-decoration: none;
-}
-
-.title a:hover,
-.title a:focus,
-.title a:active {
-  text-decoration: underline;
-}
-
-.title {
-  margin: 0;
-  line-height: 1.15;
-  font-size: 4rem;
-}
-
-.title,
-.description {
-  text-align: center;
-}
-
-.description {
-  margin: 4rem 0;
-  line-height: 1.5;
-  font-size: 1.5rem;
-}
-
-.code {
-  background: #fafafa;
-  border-radius: 5px;
-  padding: 0.75rem;
-  font-size: 1.1rem;
-  font-family: Menlo, Monaco, Lucida Console, Liberation Mono, DejaVu Sans Mono,
-    Bitstream Vera Sans Mono, Courier New, monospace;
-}
-
-.grid {
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  flex-wrap: wrap;
-  max-width: 800px;
-}
-
-.card {
-  margin: 1rem;
-  padding: 1.5rem;
-  text-align: left;
-  color: inherit;
-  text-decoration: none;
-  border: 1px solid #eaeaea;
-  border-radius: 10px;
-  transition: color 0.15s ease, border-color 0.15s ease;
-  max-width: 300px;
-}
-
-.card:hover,
-.card:focus,
-.card:active {
-  color: #0070f3;
-  border-color: #0070f3;
-}
-
-.card h2 {
-  margin: 0 0 1rem 0;
-  font-size: 1.5rem;
-}
-
-.card p {
-  margin: 0;
-  font-size: 1.25rem;
-  line-height: 1.5;
 }
 
 .logo {
@@ -126,4 +39,160 @@
   .logo img {
     filter: invert(1);
   }
+}
+
+.logo {
+  margin: 0px;
+  width: 6.979vw !important;
+  height: 1.250vw !important;
+}
+
+.navLink {
+  text-decoration-line: underline;
+  font-weight: 600;
+}
+
+.navbar {
+  color: white;
+  padding: 0 2rem;
+  position: fixed;
+  left: 0%;
+  top: 0%;
+  right: 0%;
+  bottom: auto;
+  display: flex;
+  padding-top: 25px;
+  padding-bottom: 25px;
+  flex-direction: row;
+  justify-content: space-between;
+  align-items: stretch;
+}
+
+.header {
+  position: relative;
+  height: 165px;
+  background-color: #212121;
+}
+
+.backdrop {
+  position: absolute;
+  left: 0%;
+  top: 100%;
+  right: 0%;
+  bottom: 0%;
+  height: 290px;
+  background-color: #212121;
+  z-index: 1;
+}
+
+.grid {
+  display: grid;
+  width: 100%;
+  max-width: 1350px;
+  grid-auto-columns: 1fr;
+  grid-column-gap: 0px;
+  grid-row-gap: 0px;
+  grid-template-columns: 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr;
+  grid-template-rows: auto;
+  border-radius: 10px;
+  background-color: white;
+  padding-bottom: 40px;
+}
+
+.salesHeader {
+  display: grid;
+  padding-top: 70px;
+  position: relative;
+  justify-content: space-around;
+  justify-items: center;
+  grid-auto-columns: 1fr;
+  grid-column-gap: 0px;
+  grid-row-gap: 0px;
+  grid-template-columns: 1fr 1fr;
+  grid-template-rows: auto;
+  grid-column-start: span 8;
+  grid-column-end: span 8;
+  grid-row-start: span 1;
+  grid-row-end: span 1;
+  height: 290px;
+}
+
+.salesHeaderBlock {
+  display: flex;
+  width: 100%;
+  padding-right: 70px;
+  padding-left: 70px;
+  flex-direction: column;
+  align-items: flex-start;
+  grid-auto-columns: 1fr;
+  grid-row-gap: 15px;
+  grid-template-columns: 1fr;
+  grid-template-rows: auto auto;
+  grid-column-start: span 1;
+  grid-column-end: span 1;
+  grid-row-start: span 1;
+  grid-row-end: span 1;
+}
+
+.lightText {
+  color: #757575;
+  font-weight: 600;
+  text-transform: capitalize;
+}
+
+.usdBlock {
+  display: flex;
+  grid-column-gap: 5px;
+}
+
+.usdBlock h1 {
+  margin: 0px;
+  font-size: 65px;
+  font-weight: 600;
+  letter-spacing: -0.042em;
+}
+
+.usd {
+  margin-top: 7px;
+  font-weight: 700;
+}
+
+.divider {
+  width: 1px;
+  height: 100%;
+  background-color: #e8e8e8;
+  position: absolute;
+}
+
+.salesList {
+  grid-column-start: span 8;
+  grid-column-end: span 8;
+}
+
+.saleGrid {
+  display: grid;
+  align-items: center;
+  grid-auto-columns: 1fr;
+  grid-column-gap: 0px;
+  grid-row-gap: 16px;
+  grid-template-columns: 1fr 1fr 1fr;
+  grid-template-rows: auto;
+  height: 80px;
+  border-top-style: solid;
+  border-top-width: 1px;
+  border-top-color: #e8e8e8;
+  padding-left: 70px;
+  padding-right: 70px;
+}
+
+.leftAlign {
+  justify-self: start;
+}
+
+.centerAlign {
+  justify-self: center;
+}
+
+.rightAlign {
+  justify-self: end;
 }
